--- a/hello.html
+++ b/hello.html
@@ -1,10 +1,15 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title> Hello World</title>
+  <head>
+    <title> Hello World</title>
   </head>
 
   <body>
+    <h1> This is my heading</h1>    #pairs need to match - mismatched pairs no good.
+    <h2> This heading is smaller </h2>
+    <h3> This might be used for sub heading</h3>
+    <h4> Even smaller and less important elements </h4>
+    <h5> Remember to close your pairs of tags </h5>
     Hello, World!
   </body>
 </html>
