--- a/nested_headings.html
+++ b/nested_headings.html
@@ -9,10 +9,14 @@
     <h2> Things I'm learning today</h2>
     <h3> Networking </h3>
     <h4> Network Protocols</h4>
+      <p> IP, TCP, and UDP are all networking protocols.
     <h4> HTTP Requests </h4>
+      <p>GET and POST are both HTTP methods </p>
     <h4> Web Browsers </h4>
+      <p>Chrome, Firefox, Safari are all browsers that make requests. </p>
     <h4> HTML </h4>
     <h4> Hello World </h4>
+    <p> Indeed, hello</p>
     <h4> How to add headers</h4>
 
     <p> This is a test of the emergency system </p>
