paragraph tags on links

--- a/favorite_links.html
+++ b/favorite_links.html
@@ -9,12 +9,12 @@
   <h2> Tech Links </h2>
   <a href="http://news.ycombinator.com"> yCombinator's Hacker News</a>
   <h2> Music Links </h2>
-  <a href = "http://rollingstone.com"> Rolling Stone Music </a>
-  <a href = "http://spinner.com"> Spinner's Music Blog </a>
-  <a href = "http://yahoo.com/music"> Yahoo Music </a>
+      <p><a href = "http://rollingstone.com"> Rolling Stone Music </a></p>
+      <p><a href = "http://spinner.com"> Spinner's Music Blog </a></p>
+      <p><a href = "http://yahoo.com/music"> Yahoo Music </a></p>
   <h2> News sites </h2>
-    <a href = "http://newyorktimes.com"> New york times baby baby !</a>
-    <a href = "http://latimes.com"> Los Angeles Times </a>
-    <a href = "http://cnn.com"> Cnn News </a>
+     <p><a href = "http://newyorktimes.com"> New york times baby baby !</a></p>
+     <p> <a href = "http://latimes.com"> Los Angeles Times </a> </p>
+     <p> <a href = "http://cnn.com"> Cnn News </a> </p>
 </body>
 </html>
