linked all pages

--- a/favorite_links.html
+++ b/favorite_links.html
@@ -16,5 +16,7 @@
      <p><a href = "http://newyorktimes.com"> New york times baby baby !</a></p>
      <p> <a href = "http://latimes.com"> Los Angeles Times </a> </p>
      <p> <a href = "http://cnn.com"> Cnn News </a> </p>
+
+    <p> <a href = "index.html"> BACK TO THE INDEX BABY!</a> </p>
 </body>
 </html>
