not sure what i'm committing here

--- a/images.html
+++ b/images.html
@@ -7,7 +7,7 @@
   <h1> I like cats </h1>
   <h2> I like every kind of cat </h2>
   < p> can't hug every cat </p>
-  <a href = "http://twitter.com/sockington"><img src = ".images/kitty.jpeg" width= 500/>
+  <a href = "http://twitter.com/sockington"><img src = "./images/kitty.jpeg" alt = "Image of little white kitty" width= 500/> </a>
 
 </body>
 </html>
