--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   <body>
       <h1> My pages </h1>
     <ul>
+      <p><a href = "http://validator.w3.org/check?uri=referer">
+
       <li><a href = "hello.html"> Hello World </a></li>
       <li><a href = "to_do_list.html"</a> To do list </li>
       <li><a href = "nested_headings.html"> NESTED HEADINGS</a> </li>
